name:             csds
version:          0.1
license:          BSD3
license-file:     LICENSE
copyright:        (c) 2012 Daniel Molina Wegener
maintainer:       Daniel Molina Wegener <dmw@coder.cl>
build-type:       Simple
cabal-version:    >= 1.8
category:         Data Structures
stability:        experimental
bug-reports:      https://github.com/hspec/csds/issues
homepage:         http://coder.cl/products/csds/
synopsis:         Core Stateful Data Structures
description:      Core Stateful Data Structures
                  .
		  CSDS is a library which contains several Data Structures
                  and algorithms to be used in a wide variety of projects,
                  where Stack, Queue, Priority Queue, AVL Tree, Red-Black
                  Tree are included among other Data Structures.

source-repository head
  type: git
  location: https://github.com/csds/

Library
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src
  build-depends:
      base >= 4 && <= 5
    , hspec
    , hspec-expectations
  exposed-modules:
      Data.CSDS.StackL
--  other-modules:
--      Test.Hspec.Pending
--      Test.Hspec.Internal
--      Test.Hspec.Formatters.Internal

test-suite hspec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  ghc-options:
      -Wall -Werror
  build-depends:
      base >= 4 && <= 5
    , csds >= 0.1
    , hspec
    , hspec-expectations

